# PCPP

./: Pipfile  path_to_output  pyproject.toml
files/: AF_Safety.xml  AF_Safety_OG.xml
files_out/: AF_Safety_OG.xml
notebooks/: advanced_classes_and_oop.ipynb  catch_me.ipynb  glenn.ipynb  gui.ipynb  lab_1.ipynb  lab_properties.ipynb  lab_timestamping.ipynb  settling_widget.ipynb  test.ipynb  very_simple_calculator.ipynb
